--- a/JoyStick/index.html
+++ b/JoyStick/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style/joy-stick.css" />
 
-    <script src="./src/joy-stick.js" defer></script>
+    <script src="./src/main.js" type="module"></script>
   </head>
   <body>
     <div class="background">
       <div class="stick-field">
         <div id="stick"></div>
-    </div>
+      </div>
     </div>
   </body>
 </html>
